# SwinShogi

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  test_checkpoint.py  test_game_state_refactor.py
config/: __init__.py  default_config.py
data/test_checkpoints/: latest
data/test_checkpoints/checkpoint_step_100_20250625_010638/: metadata.json
scripts/: run_integration_test.sh  run_tests.sh  test_all.sh
src/: __main__.py  selfplay_minimal.py
src/core/: __init__.py  actor_critic.py  reinforcement_learning.py  self_play.py  trainer.py
src/evaluation/: evaluator.py
src/interface/: usi.py
src/model/: __init__.py  actor_critic.py  shogi_model.py  swin_shogi.py  swin_transformer.py
src/rl/: __init__.py  data_generator.py  game_utils.py  mcts.py  rl_config.py  self_play.py  trainer.py  training_utils.py
src/shogi/: board_encoder.py  board_visualizer.py  shogi_env.py  shogi_game.py  shogi_pieces.py
src/tests/: test_board_encoder.py  test_performance_evaluation.py  test_shogi_rules.py  test_swin_shogi.py
src/utils/: __init__.py  action_utils.py  checkpoint.py  jax_utils.py  model_utils.py  performance.py
tests/: __init__.py  test_performance_evaluation.py
tests/interface/: __init__.py
tests/model/: __init__.py  test_actor_critic.py  test_swin_shogi.py  test_swin_shogi2.py
tests/rl/: __init__.py  test_mcts.py  test_mcts_integration.py  test_self_play.py  test_trainer.py
tests/shogi/: __init__.py  test_shogi_rules.py
tests/utils/: __init__.py  test_performance_evaluation.py
(+1 files in other folders)
