[tool.poetry]
name = "swinshogi"
version = "0.1.0"
description = "将棋AIプロジェクト - Swin Transformerベースの深層強化学習モデル"
authors = ["Yoshi <yoshi@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
jax = "^0.6.2"
jaxlib = "^0.6.2"
flax = "^0.10.6"
numpy = "^2.3.0"
optax = "^0.2.5"
chex = "^0.1.89"
absl-py = "^2.3.0"
rich = "^14.0.0"
tqdm = "^4.67.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "src.__main__:main"
test = "scripts.test_all:main" 